--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,11 @@ SET(OSPRAY_VERSION
   ${OSPRAY_VERSION_MAJOR}.${OSPRAY_VERSION_MINOR}.${OSPRAY_VERSION_PATCH}
 )
 SET(OSPRAY_SOVERSION 0)
-SET(ENABLE_STATIC_LIB ON)
+SET(OSPRAY_ENABLE_STATIC_LIB ON)
+
+IF(OSPRAY_ENABLE_STATIC_LIB)
+    ADD_DEFINITIONS(-DOSPRAY_ENABLE_STATIC_LIB)
+ENDIF()
 
 SET(EMBREE_TREE "3.2.0")
 MACRO(PRINT var)
